--- a/src/classes/FillInvoiceNumberTest.cls
+++ b/src/classes/FillInvoiceNumberTest.cls
@@ -24,5 +24,21 @@ private class FillInvoiceNumberTest {
         Test.stopTest();
         
         Opportunity opp1 = [SELECT Name, Invoicing_Item_Number__c FROM Opportunity WHERE Name = 'Test opp' LIMIT 1];
+        System.assertEquals(num, opp1.Invoicing_Item_Number__c);
+    }
+    
+    @IsTest
+    static void numberTooLong(){
+        
+        Opportunity opp = InsertOppTestData.addOpportunity();
+        String num = '1234567890123456789';
+        
+        Test.startTest();
+        try {
+            FillInvoiceNumberController.addInvoiceNumberOpp(opp.Id, num);
+        }catch (AuraHandledException e){
+            System.assert(e.getMessage().contains('Invoice number is too long'));
+        }
+        Test.stopTest();
     }
 }
